<resources>
    <string name="app_name">SAS SOLUTIONS</string>
    <string name="app_name1">SAS SOLUTIONS PVT LTD</string>
    <string name="no_whatsapp">Please install What\'sapp</string>

    <string name="welcome_back"><font color="#FF000000"><b>Welcome to</b></font> <font color="#2AA856">Sas Solutions</font></string>

    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="sign_up_to_continue">Sign up to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_signup">Don\'t have an Account? <font color="#2AA856"><b>SignUp</b></font></string>
    <string name="already_have_an_account_login">Already have an Account? <font color="#2AA856"><b>Login</b></font></string>
    <string name="sign_up">SignUp</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_no">Phone No.</string>
    <string name="address">Address</string>
    <string name="select_profile_image">Select Profile Image</string>
    <string name="net_error">Please turn on your internet and try again!</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="please_enter_your_phone">Please enter your phone no.</string>
    <string name="please_enter_your_address">Please enter your address</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="please_re_enter_your_password">Re-enter your password</string>
    <string name="password_not_match">Password not match</string>


    <string name="permission_required">Permission Required...</string>
    <string name="what_are_you_looking_for">What are you looking for....</string>
    <string name="home">Home</string>
    <string name="book_now">Book Now</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_app">Share App</string>
    <string name="logout">Logout</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="tecnition_name">Tecnition Name</string>
    <string name="details">Details</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="your_booking_has_been_confirmed">Your booking has been confirmed</string>
    <string name="ok">Ok</string>
    <string name="success">Success!</string>
</resources>