<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        android:elevation="@dimen/_2sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:orientation="vertical">



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/success"
                android:layout_marginTop="@dimen/_20sdp"
                android:gravity="center_horizontal"
                android:textSize="@dimen/_25sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat_bold"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:textSize="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/your_booking_has_been_confirmed"/>

            <ImageView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_gravity="center_horizontal"
                android:padding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                app:tint="@color/buttonColor"
                android:src="@drawable/booking_done"/>
            <TextView
                android:id="@+id/tvOk"
                android:layout_width="@dimen/_120sdp"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_40sdp"
                android:layout_centerHorizontal="true"
                android:text="@string/ok"
                android:textAllCaps="true"
                android:gravity="center"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:background="@drawable/text_bg"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>