<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:id="@+id/rlMainLayout"
    android:background="@color/screen_bg"
    android:layout_height="match_parent">



    <RelativeLayout
        android:id="@+id/rlToolBar"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_height="?attr/actionBarSize">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:src="@drawable/ic_baseline_back"
            android:layout_centerVertical="true"
            android:padding="@dimen/_2sdp"/>

        <LinearLayout
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">



            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:layout_marginStart="@dimen/_5sdp"
                android:textStyle="bold"
                android:textSize="@dimen/_14sdp"
                android:text="@string/app_name"/>



        </LinearLayout>



    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rlToolBar"
        android:layout_above="@id/llBuyNow">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:text="@string/tecnition_name"/>


            <TextView
                android:id="@+id/tvTecnitionName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center_vertical"
                android:elevation="@dimen/_1sdp"
                android:layout_marginEnd="@dimen/_2sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:layout_marginStart="@dimen/_2sdp"
                android:textColor="@color/black"
                android:background="@drawable/edit_text_cornet_with_white_bg"
                android:inputType="textPersonName"
                android:paddingLeft="@dimen/_10sdp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/name"/>


            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/edit_text_cornet_with_white_bg"
                android:hint="@string/name"
                android:elevation="@dimen/_1sdp"
                android:layout_marginEnd="@dimen/_2sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:layout_marginStart="@dimen/_2sdp"
                android:inputType="textPersonName"
                android:paddingLeft="@dimen/_10sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/phone_no"/>

            <EditText
                android:id="@+id/etPhoneNum"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:paddingLeft="@dimen/_10sdp"
                android:elevation="@dimen/_1sdp"
                android:layout_marginEnd="@dimen/_2sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:layout_marginStart="@dimen/_2sdp"
                android:hint="@string/phone_no"
                android:inputType="phone"
                android:background="@drawable/edit_text_cornet_with_white_bg"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/email"/>

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/email"
                android:elevation="@dimen/_1sdp"
                android:paddingLeft="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_2sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:layout_marginStart="@dimen/_2sdp"
                android:inputType="textEmailAddress"
                android:background="@drawable/edit_text_cornet_with_white_bg"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/address"/>

            <EditText
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/address"
                android:elevation="@dimen/_1sdp"
                android:paddingLeft="@dimen/_10sdp"
                android:inputType="textPersonName"
                android:layout_marginEnd="@dimen/_2sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:layout_marginStart="@dimen/_2sdp"
                android:background="@drawable/edit_text_cornet_with_white_bg"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/details"/>

            <EditText
                android:id="@+id/etDetail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:paddingLeft="@dimen/_10sdp"
                android:hint="@string/details"
                android:elevation="@dimen/_1sdp"
                android:gravity="start"
                android:inputType="textMultiLine"
                android:imeOptions="actionDone"
                android:paddingTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_2sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:layout_marginStart="@dimen/_2sdp"
                android:background="@drawable/edit_text_cornet_with_white_bg"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:weightSum="1">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/select_date"/>
                    <RelativeLayout
                        android:id="@+id/rlDate"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:elevation="@dimen/_1sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_2sdp"
                        android:layout_marginBottom="@dimen/_2sdp"
                        android:layout_marginStart="@dimen/_2sdp"
                        android:background="@drawable/edit_text_cornet_with_white_bg">
                        <TextView
                            android:id="@+id/tvDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:textColor="@color/black"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:text="@string/select_date"/>

                        <ImageView
                            android:id="@+id/ivSelectDate"
                            android:layout_width="@dimen/_25sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:src="@drawable/ic_baseline_calendar_today_24"
                            android:layout_marginEnd="@dimen/_6sdp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:padding="@dimen/_2sdp"/>
                    </RelativeLayout>

                </LinearLayout>



            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_time"/>
                <RelativeLayout
                    android:id="@+id/rlTime"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:elevation="@dimen/_1sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_2sdp"
                    android:layout_marginBottom="@dimen/_2sdp"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:background="@drawable/edit_text_cornet_with_white_bg">
                    <TextView
                        android:id="@+id/tvTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:textColor="@color/black"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:text="@string/select_time"/>

                    <ImageView
                        android:id="@+id/ivSelectTime"
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:src="@drawable/ic_baseline_access_time_24"
                        android:layout_marginEnd="@dimen/_6sdp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:padding="@dimen/_2sdp"/>
                </RelativeLayout>

            </LinearLayout>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


    <LinearLayout
        android:id="@+id/llBuyNow"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvBookNow"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_centerHorizontal="true"
            android:text="@string/book_now"
            android:textAllCaps="true"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="@drawable/text_bg"/>
    </LinearLayout>
</RelativeLayout>