<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_bg"
    tools:context=".Activities.Auth.LoginActivity">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical">


            <ImageView
                android:layout_width="@dimen/_220sdp"
                android:layout_height="@dimen/_120sdp"
                android:padding="@dimen/_10sdp"
                android:visibility="gone"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_25sdp"
                android:src="@drawable/logo"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/_15sdp"
                android:layout_marginLeft="@dimen/_15sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_50sdp">
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="@dimen/_8sdp"
                    android:layout_margin="@dimen/_2sdp"
                    android:backgroundTint="@color/white"
                    android:elevation="@dimen/_6sdp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:orientation="vertical">


                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_60sdp"
                            android:gravity="center_vertical"

                            android:layout_marginTop="@dimen/_67sdp">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/welcome_back"
                                    android:textSize="@dimen/_16sdp"
                                    android:fontFamily="@font/montserrat_bold" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/sign_in_to_continue"
                                    android:textSize="@dimen/_13sdp"
                                    android:fontFamily="@font/montserrat_regular"/>
                            </LinearLayout>


                        </RelativeLayout>




                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:text="@string/email"
                            android:textSize="@dimen/_13sdp"
                            android:fontFamily="@font/montserrat_regular"/>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:layout_marginTop="@dimen/_6sdp"
                            app:passwordToggleEnabled="false"
                            app:hintEnabled="false"
                            android:backgroundTint="@color/purple_200"
                            android:layout_centerVertical="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_height="wrap_content"
                                android:layout_width="match_parent"
                                android:id="@+id/etEmail"
                                android:fontFamily="@font/montserrat_regular"
                                android:drawableStart="@drawable/ic_baseline_email_24"
                                android:drawablePadding="@dimen/_10sdp"
                                android:textSize="@dimen/_12sdp"
                                android:textColor="@android:color/black"
                                android:inputType="textEmailAddress"
                                android:background="@color/white"
                                android:hint="abc@gmail.com"/>

                        </com.google.android.material.textfield.TextInputLayout>






                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_12sdp"
                            android:text="@string/password"
                            android:fontFamily="@font/montserrat_regular"
                            android:textSize="@dimen/_13sdp"/>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:layout_marginTop="@dimen/_2sdp"
                            app:passwordToggleEnabled="true"
                            app:passwordToggleTint="@color/gry"
                            app:hintEnabled="false"
                            android:backgroundTint="@color/purple_200"
                            android:layout_centerVertical="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_height="wrap_content"
                                android:layout_width="match_parent"
                                android:id="@+id/etPassword"
                                android:drawableStart="@drawable/ic_baseline_lock_open"
                                android:drawablePadding="@dimen/_10sdp"
                                android:textSize="@dimen/_12sdp"
                                android:fontFamily="@font/montserrat_regular"
                                android:textColor="@android:color/black"
                                android:layout_margin="1dp"
                                android:paddingRight="10sp"
                                android:paddingLeft="5sp"
                                android:inputType="textPassword"
                                android:background="@color/white"
                                android:hint="@string/password"/>

                        </com.google.android.material.textfield.TextInputLayout>


                        <TextView
                            android:id="@+id/tvForgetPassword"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:text="@string/forget_password"
                            android:fontFamily="@font/montserrat_semi_bold"
                            android:textColor="@color/black"
                            android:layout_gravity="right|end"
                            android:textSize="@dimen/_12sdp"/>



                        <TextView
                            android:id="@+id/tvLogIn"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:layout_marginBottom="@dimen/_5sdp"
                            android:textColor="@color/white"
                            android:gravity="center"
                            android:textStyle="bold"
                            android:fontFamily="@font/montserrat_regular"
                            android:textSize="@dimen/_14sdp"
                            android:textAllCaps="true"
                            android:background="@drawable/text_bg"
                            android:text="@string/login"/>


                        <TextView
                            android:id="@+id/tvSignUp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/_25sdp"
                            android:text="@string/don_t_have_an_account_signup"
                            android:textColor="@color/black"
                            android:fontFamily="@font/montserrat_regular"
                            android:layout_gravity="center_horizontal"
                            android:textSize="@dimen/_12sdp"/>


                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                </LinearLayout>


                <ImageView
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:padding="@dimen/_20sdp"
                    android:layout_margin="@dimen/_2sdp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/circle_bg"
                    android:src="@drawable/logo"/>




            </RelativeLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>